--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,15 @@ android {
     dataBinding {
         enabled true
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.github.Aspsine:SwipeToLoadLayout:1.0.3'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
