--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.NoticeViewActivity" />
+        <activity android:name=".activity.MyPageActivity"></activity>
     </application>
 
 </manifest>
