--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.AuthActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".activity.NoticeViewActivity" />
         <activity android:name=".activity.MyPageActivity"></activity>
     </application>
