--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity
             android:name=".activity.AuthActivity"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".activity.NoticeViewActivity" />
         <activity android:name=".activity.MyPageActivity"></activity>
     </application>
