Final Changes, minor bug fix Implement Image Loading Library Implement QuestionView, NewQuestionActivity Implement SoochickActivity Add Project Icons Reconfigure Libraries Fix Crash: nullPointerException when User info is null Change Menu to show title at toolbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
             android:name=".activity.RegisterActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.NoticeViewActivity" />
-        <activity android:name=".activity.MyPageActivity"></activity>
+        <activity android:name=".activity.MyPageActivity" />
+        <activity android:name=".activity.QuestionViewActivity" />
+        <activity android:name=".activity.SoochickActivity" />
+        <activity android:name=".activity.NewQuestion"></activity>
     </application>
 
 </manifest>
